--- a/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
+++ b/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Ocelot" Version="23.4.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
