--- a/OcelotApiGatewayDemo/appsettings.json
+++ b/OcelotApiGatewayDemo/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "TokenPreferences": {
+    "Audience": "https://localhost:5001",
+    "Issuer": "https://localhost:5001",
+    "SecurityKey": "your-super-secret-key-with-at-least-16-characters",
+    "AccessTokenExpiration": 30,
+    "RefreshTokenExpiration": 1440,
+    "LongAccessTokenExpiration": 43200,
+    "ForgotPasswordTokenExpiration": 60
+  },
+
   "AllowedHosts": "*"
 }
