--- a/DemoApi/appsettings.json
+++ b/DemoApi/appsettings.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "TokenPreferences": {
     "Audience": "https://localhost:5001",
     "Issuer": "https://localhost:5001",
@@ -16,5 +15,11 @@
     "ForgotPasswordTokenExpiration": 60
   },
 
+  "Authentication": {
+    "Google": {
+      "ClientId": "428721028366-6bvbsb5esggm7cuvk51vt8krphkj8iq5.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
