--- a/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
+++ b/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.12" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Ocelot" Version="23.4.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
