Appsettings: Enter your client ID and client Secret to both project configurations

--- a/DemoApi/DemoApi.csproj
+++ b/DemoApi/DemoApi.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>68a68584-888e-45e2-9279-f6e61db687c0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
