--- a/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
+++ b/OcelotApiGatewayDemo/OcelotApiGatewayDemo.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>d2441709-e0ee-488a-8eb8-bf8f1cf6db17</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
