--- a/OcelotApiGatewayDemo/appsettings.json
+++ b/OcelotApiGatewayDemo/appsettings.json
@@ -17,8 +17,8 @@
 
   "Authentication": {
     "Google": {
-      "ClientId": "428721028366-6bvbsb5esggm7cuvk51vt8krphkj8iq5.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   },
   "AllowedHosts": "*"
